# azure-aitoolsconnect

./: .gitignore  Cargo.toml  README.md  USAGE.md
.github/workflows/: ci.yml  release.yml
config/: example.toml
src/: lib.rs  main.rs
src/auth/: device_code.rs  interactive.rs  managed_identity.rs  manual_token.rs  mod.rs  token_cache.rs
src/cli/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/network/: mod.rs
src/output/: mod.rs
src/services/: mod.rs
src/services/document_intelligence/: mod.rs
src/services/language/: mod.rs
src/services/speech/: mod.rs
src/services/translator/: mod.rs
src/services/vision/: mod.rs
src/testing/: mod.rs
