[package]
name = "azure-aitoolsconnect"
version = "0.1.1"
edition = "2021"
description = "CLI tool to verify connectivity from client to Azure AI Services"
license = "MIT"
authors = ["Allan"]
readme = "README.md"
keywords = ["azure", "ai", "connectivity", "testing", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "azure-aitoolsconnect"
path = "src/main.rs"

[lib]
name = "azure_aitoolsconnect"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Terminal output
console = "0.15"
indicatif = "0.17"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding for audio/images
base64 = "0.22"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# URL handling
url = "2"

# Async trait support
async-trait = "0.1"

# Environment variables
dotenvy = "0.15"

# OAuth2 for device code flow and user authentication
oauth2 = "4.4"
serde_urlencoded = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
